js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib2/l2.0.kt
fun test(): Int {
    return testStringProperty()
}
